objects/Student__c.object
<CustomObject>
    <description>Creating an Object for Student Information</description>
    <label>Student</label>
    <nameField>
        <displayFormat>St-{0000}</displayFormat>
        <label>Student Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Courses__c</fullName>
        <label>Courses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Courses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Telugu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects__c</fullName>
        <label>Subjects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School_Board__c</fullName>
        <label>School/Board</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Father_s_Name__c</fullName>
        <label>Father&apos;s Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mother_s_Name__c</fullName>
        <label>Mother&apos;s Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage2_c__c</fullName>
        <label>Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage3_c__c</fullName>
        <label>Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Language__c</fullName>
        <label>Other Language</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Board12__c</fullName>
        <label>School/Board</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualification10__c</fullName>
        <defaultValue>&quot;Secondary&quot;</defaultValue>
        <label>Qualification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification12__c</fullName>
        <defaultValue>&quot;Senior Secondary&quot;</defaultValue>
        <label>Qualification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualificationgra__c</fullName>
        <defaultValue>&quot;Graduation&quot;</defaultValue>
        <label>Qualification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Completion__c</fullName>
        <label>Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_of_Completion__c</fullName>
        <label>Year of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aadhaar_Card_Number__c</fullName>
        <label>Aadhaar Card Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Completion1__c</fullName>
        <label>Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_of_Completion1__c</fullName>
        <label>Year of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_of_Completion2__c</fullName>
        <label>Year of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>College_University_c__c</fullName>
        <label>College/University</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Certification1__c</fullName>
        <label>Course/Certification1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Certification2__c</fullName>
        <label>Course/Certification2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>